--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "netlify-identity-widget": "^1.9.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
